--- a/Taglist.html
+++ b/Taglist.html
@@ -16,8 +16,8 @@ The purpose of this snippet is to list all your posts posted with a certain tag.
 {% for tag in tags %}
     <h2 id="{{ tag | slugify }}">{{ tag }}</h2>
     <ul>
-     {% for post in site.texts %}
-         {% if te.tags contains tag %}
+     {% for text in site.texts %}
+         {% if text.tags contains tag %}
          <li>
          <p>
          <a href="{{ text.url }}">
