--- a/Taglist.html
+++ b/Taglist.html
@@ -21,7 +21,7 @@ The purpose of this snippet is to list all your posts posted with a certain tag.
          <li>
          <p>
          <a href="{{ text.url }}">
-         {{ texts.title }}
+         {{ text.title }}
          </a>
          <small>- {{ text.folio }}</small>
          <br/>
