--- a/tag.html
+++ b/tag.html
@@ -10,8 +10,8 @@ The following part extracts all the tags from your posts and sort tags, so that 
 =======================
 {% endcomment %}
 {% assign rawtags = "" %}
-{% for post in site.posts %}
-    {% assign ttags = post.tags | join:'|' | append:'|' %}
+{% for text in site.texts %}
+    {% assign ttags = text.tags | join:'|' | append:'|' %}
     {% assign rawtags = rawtags | append:ttags %}
 {% endfor %}
 {% assign rawtags = rawtags | split:'|' | sort %}
@@ -50,16 +50,16 @@ The purpose of this snippet is to list all your posts posted with a certain tag.
 {% for tag in tags %}
     <h2 id="{{ tag | slugify }}">{{ tag }}</h2>
     <ul>
-     {% for post in site.posts %}
-         {% if post.tags contains tag %}
+     {% for text in site.texts %}
+         {% if text.tags contains tag %}
          <li>
          <p>
-         <a href="{{ post.url }}">
-         {{ post.title }}
+         <a href="{{ text.url }}">
+         {{ text.title }}
          </a>
-         <small>- {{ post.date | date: "%F" }}</small>
+         <small>- {{ text.folio }}</small>
          <br/>
-         {% for tag in post.tags %}
+         {% for tag in text.tags %}
              <a class="tag small" href="#{{ tag | slugify }}">{{ tag }}</a>
          {% endfor %}
          </p>
