--- a/materials.html
+++ b/materials.html
@@ -52,7 +52,7 @@ The purpose of this snippet is to list all your posts posted with a certain tag.
     <h2 id="{{ tag | slugify }}">{{ tag }}</h2>
     <ul>
      {% for text in site.texts %}
-         {% if text.tags contains tag %}
+         {% if {{text.tags | downcase}} contains tag %}
          <li>
          <p>
          <a href="{{ text.folio }}">
