--- a/materials.html
+++ b/materials.html
@@ -52,7 +52,7 @@ The purpose of this snippet is to list all your posts posted with a certain tag.
     <h2 id="{{ tag | slugify }}">{{ tag }}</h2>
     <ul>
      {% for text in site.texts %}
-        {% txtags = text.materials | downcase %}
+        {% assign txtags = text.materials | downcase %}
          {% if txtags contains tag %}
          <li>
          <p>
